[package]
name = "graph-anns"
version = "0.1.0"
# edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.23.0"
tinyset = "0.4.2"
parking_lot = "0.11.2"
atomic_float = "0.1.0"
rand = "0.8.4"
rand_core = "0.6.3"
rand_xoshiro = "0.6.0"
rayon = "1.5.1" #TODO: remove?
nohash-hasher = "0.2.0"

[profile.release]
debug = true
