[package]
name = "py_graph_anns"
version = "0.1.0"
# edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph_anns = { path = "../graph_anns" }
rand = "0.8.5"
rand_core = "0.6.4"
rand_xoshiro = "0.6.0"
soa_derive = "0.12.0"
is_sorted = "0.1.1"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
# python bindings TODO: make building this stuff optional
pyo3 = { version = "0.20.2", features = ["extension-module"] }
numpy = "0.20.0"
nohash-hasher = "0.2.0"
rayon = "1.5.1"

# stuff for python bindings
[lib]
name = "py_graph_anns"
crate-type = ["cdylib"]

[dev-dependencies]
criterion = "0.3"
ordered-float = "3.0.0"
serde_json = "1.0"

