[package]
name = "graph_anns"
version = "0.1.0"
# edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyset = "0.4.2"
rand = "0.8.4"
rand_core = "0.6.3"
rand_xoshiro = "0.6.0"
nohash-hasher = "0.2.0"
indexmap = "1.8.2"

[dev-dependencies]
criterion = "0.3"
ordered-float = "3.0.0"

[[bench]]
name = "benches"
harness = false
